--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/filters.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/filters.html
@@ -26,7 +26,7 @@
     <filtering:filters>
       <list:first>
         <li>
-          <filtering:clear-link>Clear all filters</filtering:clear-link>
+          <filtering:clear-link>Clear filters</filtering:clear-link>
         </li>
       </list:first>
     </filtering:filters>
