git-svn-id: file:///var/svn/claro-catalog@315 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/require-login.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/require-login.html
@@ -9,7 +9,7 @@
 	    <webshop:login-form>
 	      <table> 
 	        <tr><td>Email</td><td><form:email-field class="formfield emailfield"/></td><td></td></tr>
-	        <tr><td>Password</td><td><form:password-field class="formfield passwordfield"/></td><td><a href="/register">Forgot password</a>?</td></tr>
+	        <tr><td>Password</td><td><form:password-field class="formfield passwordfield"/></td><td><form:forgot-password-link>Forgot password</form:forgot-password-link>?</td></tr>
 	      </table>
 	      	<div class="messages"> 
 	        <form:failure> 
