--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/require-login.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/require-login.html
@@ -16,7 +16,7 @@
 	        <tr><td><span class="error">Invalid user name or password</span></td></tr>
 	        </form:failure>
 	        </div>
-			<div class="buttons">
+			<div class="button-bar">
 				<form:login-button id="login-button" />
 				<a href="/register">Register as a new customer</a>
 			</div>
