--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/product-box.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/product-box.html
@@ -6,7 +6,7 @@
       <div><product:value property="Variant" /></div>
   </div>
 	<div class="button-bar">
-    <product:add-to-cart-link class="add-button">Add to Cart</product:add-to-cart-link> 
+    <product:add-to-cart-link class="button2">Add to Cart</product:add-to-cart-link> 
     <b><product:value property="Price" /></b>
   </div>
 </li>
