--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/cart.css
@@ -1,9 +1,4 @@
 
-#content {
-}
-
-thead th {
-}
 
 .image {
 	height: 50px;
@@ -13,26 +8,7 @@ thead th {
 	border-top: 1px solid #726936;
 }
 
-ul.messages {
-	list-style: none;
-	margin-top: 20px;
-	padding: 0px;
-}
-
-ul.message li {
-}
-
-#place-order-button {
-	float: left;
-	width: 98px;
-	height: 19px;
-	margin: -5px 0px 0px 10px;
-	padding-top: 4px;
-	background: url(images/subpage1_02.gif) no-repeat center center;
-	text-align: center;
-	text-decoration: none;
-	letter-spacing: 0px;
-	font-size: 11px;
-	font-weight: bold;
-	color: #FFFFFF;
+.button-bar {
+	float:right;
+	margin-top: 24px;
 }
