--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/default.css
@@ -27,6 +27,52 @@ p, ul, ol, dl {
 	text-align: justify;
 }
 
+table {
+	border-spacing: 0px 0px;
+	padding: 0px;
+	margin: 0px;
+}
+
+.form table {
+	border: 1px solid #D1D1D1;
+	border-collapse: collapse;
+	margin-left: -2px
+}
+
+.form table tr:first-child td {
+	padding-top: 6px;
+}
+
+.form tr.error td span {
+	position: relative;
+	top: -6px;
+	padding-left: 4px;
+}
+
+.form table tr td:first-child {
+	background-color: #FEFDFB;
+}
+.form table tr td {
+	background-color: #F6F2DA;
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-bottom: 6px;
+}
+
+.form .messages {
+	margin-top: 12px;
+}
+
+.form table {
+	float: left;
+}
+
+.form .infobox {
+	padding-right: 24px;
+	float: left;
+	
+}
+
 /** LIST STYLE 1 */
 
 .list1 {
@@ -112,26 +158,6 @@ p, ul, ol, dl {
 .list2 li h3 {
 }
 
-.list2 .add-button {
-	background: url(images/homepage15.gif) no-repeat center center;
-	width: 69px;
-	display: block;
-	text-align: center;
-}
-
-.list2 .add2 {
-	float: left;
-	width: 69px;
-	height: 18px;
-	padding-top: 7px;
-	background: url(images/homepage15.gif) no-repeat center center;
-	text-decoration: none;
-	text-align: center;
-	letter-spacing: -1px;
-	font-size: 9px;
-	font-weight: bold;
-	color: #FFFFFF;
-}
 
 .list2 b {
 #	float: left;
@@ -411,19 +437,9 @@ hr {
 	width: 244px;
 }
 
-#cart-items .button {
-	float: left;
-	width: 61px;
-	height: 17px;
+#cart-items a {
 	margin: -5px 0px 0px 10px;
-	padding-top: 6px;
-	background: url(images/subpage1_03.gif) no-repeat center center;
-	text-align: center;
-	text-decoration: none;
-	letter-spacing: -1px;
-	font-size: 9px;
-	font-weight: bold;
-	color: #FFFFFF;
+	float: left;
 }
 
 #cart-items span {
@@ -501,13 +517,6 @@ hr {
 	width: 612px;
 }
 
-#page.full-width #content {
-	width: auto;
-	float: left;
-	padding: 20px;
-	
-}
-
 /** BOX STYLE A */
 
 .boxA {
@@ -528,7 +537,16 @@ hr {
 
 .boxA .content {
 	padding: 10px 15px;
-} 
+}
+
+/** BOX STYLE B */
+#content.wide {
+	
+	/* make wide */
+	width: auto; 
+	float: none;
+}
+
 
 /** SIDEBAR */
 
@@ -665,7 +683,6 @@ hr {
 }
 
 .product-box .info-box {
-	border: 1px solid black;
 	position: absolute;
 	left: 122px;
 	width: 160px;
@@ -675,14 +692,14 @@ hr {
 	position: absolute;
 	left: 122px;
 	width: 160px;
-	bottom: 0px;
-	border: 1px solid #E2DCBF;
+	bottom: 14px;
 }
 
 .product-box .button-bar .money {
 	float: right;
 	font-size: 13pt;
 	word-spacing: -4px;
+	margin-top: 2px;
 }
 
 .product-box .button-bar .money-sep {
@@ -719,50 +736,76 @@ hr {
 }
 
 .messages {
-	padding-top: 10px;
 }
 
 .messages .error {
-	font-size: 10pt;
-	font-weight: bold;
+}
+
+ul.messages {
+	margin: 0px;
+	padding: 0px;
+}
+
+.messages li {
+	display: block;
+	list-style: none;
+	left: 0px;
+}
+
+.error {
+	font-size: 9pt;
 	color: red;
 }
 
-/** button-bar */
+/** BUTTONS */
  .button-bar {
-	margin-top: 12px;
-	margin-bottom: 12px;
+ }
+
+.button1, .button2, .button3, .button4, .button5 {
+	height: 18px;
+	text-align: center;
+	text-decoration: none;
+	padding-top: 7px;
+	font-size: 9px;
+	font-weight: bold;
+	color: white;
+	letter-spacing: -1px;
+	float: left;
 }
 
-#login-button {
-	float: left;
+input.button1, input.button2, input.button3, input.button4, input.button5 {
+	border: none;
+	height: 25px;
+	padding-top: 0px;
+	vertical-align: top;
+	
+}
+
+.button-bar .button1, .button-bar .button2, .button-bar .button3, .button-bar .button4 , .button-bar .button5 {
+}
+
+.button1 {
+	background: url(images/button-47.gif) no-repeat center center;
+	width: 47px;
+}
+
+.button2 {
+	background: url(images/button-61.gif) no-repeat center center;
 	width: 61px;
-	height: 23px;
-	margin: 0px 0px 0px 0px;
-	padding-top: 2px;
-	padding-left: 8px;
-	border: none;
-	background: url(images/subpage1_01.gif) no-repeat center center;
-	text-align: center;
-	text-decoration: none;
-	letter-spacing: 0px;
-	font-size: 11px;
-	font-weight: bold;
-	color: #FFFFFF;
 }
 
-#register-button {
-	float: left;
-	width: 98px;
-	height: 27px;
-	border: none;
-	margin: 0px 0px 0px 0px;
-	padding-top: 4px;
-	background: url(images/subpage1_02.gif) no-repeat center center;
-	text-align: center;
-	text-decoration: none;
-	letter-spacing: 0px;
-	font-size: 11px;
-	font-weight: bold;
-	color: #FFFFFF;
+.button3 {
+	background: url(images/button-69.gif) no-repeat center center;
+	width: 69px;
 }
+
+.button4 {
+	background: url(images/button-92.gif) no-repeat center center;
+	width: 92px;
+}
+
+.button4 {
+	background: url(images/button-112.gif) no-repeat center center;
+	width: 112px;
+}
+
