--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/shipping.css
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/shipping.css
@@ -1,38 +1,18 @@
 
 #content {
+	/* swap sides */
+	float:left;
 }
 
-thead th {
+#sidebar {
+	/* swap sides */
+	float: right;
 }
 
-.image {
-	height: 50px;
+.messages {
+	margin-top: 12px;
 }
 
-.total {
-	border-top: 1px solid #726936;
-}
-
-ul.messages {
-	list-style: none;
-	margin-top: 20px;
-	padding: 0px;
-}
-
-ul.message li {
-}
-
-#place-order-button {
-	float: left;
-	width: 98px;
-	height: 19px;
-	margin: -5px 0px 0px 10px;
-	padding-top: 4px;
-	background: url(images/subpage1_02.gif) no-repeat center center;
-	text-align: center;
-	text-decoration: none;
-	letter-spacing: 0px;
-	font-size: 11px;
-	font-weight: bold;
-	color: #FFFFFF;
+.button-bar {
+	margin-top: 12px;
 }
