--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/order-sidebar.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/order-sidebar.html
@@ -22,6 +22,18 @@
 				        </shopping-cart:total-prices>
 				    </shopping-cart:items>
   			            <tr><td></td></tr>
+  			            <tr><td colspan="3"><h3>Delivery Address</h3></td></tr>
+  			            <tr><td colspan="3">
+				    <webshop:current-order>
+  			            order
+  			            a<order:link>hi</order:link>
+  			            b<order:items><list:size/></order:items>
+  			            v<order:delivery-address>del
+  			            d<address:address1/>
+  			            e</order:delivery-address>
+ 			         </webshop:current-order>
+ 			         </td></tr>
+  			            <tr><td></td></tr>
   			            <tr><td colspan="3"><h3>Shipping</h3></td></tr>
 				  </webshop:shopping-cart>
 		      </table>
