--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/left_bar.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/left_bar.html
@@ -1,6 +1,44 @@
 <div id="left_bar" class="side_bar">
   <div id="navigatie">
   <template:include template="templates/category_menu"/>
+
 </div>
-  <div class="page_menu_footer"></div> 
+
+<div class="page_menu_artgrp">
+
+	<div class="description">Zomeractie</div>
+
+	<div class="items">
+	
+		<div class="title" style="cursor:pointer" onclick="location.href='/dbres/a/2739'">Polar monitoractie 2010</div>
+		<div class="text">
+			
+Als u nu een nieuwe LCD monitor bestelt voor uw Polar E of ED, nemen wij de montagekosten voor onze rekening en heeft u weer helder beeld bij het programmeren van uw machine.
+
+ /&#160;<a class="more" href="/dbres/a/2739">Meer</a>
+		</div>
+	
+	</div>
+
+</div>
+<div class="page_menu_artgrp">
+
+	<div class="description">Besparen met Anicolor</div>
+
+	<div class="items">
+	
+		<div class="title" style="cursor:pointer" onclick="location.href='/dbres/a/1755'">Heidelberg Speedmaster SM 52 Anicolor</div>
+		<div class="text">
+			
+Anicolor biedt u de combinatie van een extreem lage inschiet bij een ongeëvenaarde offsetkwaliteit.
+
+ /&#160;<a class="more" href="/dbres/a/1755">Meer</a>
+		</div>
+	
+	</div>
+
+</div>
+
+
+  <div class="page_menu_footer" style="position:absolute; bottom: 12px; width: 180px; text-align: center"><span style="position:relative; bottom:4px;">Powered By </span><img  height="40px" src="/images/AgileXS.png"></img></div> 
 </div>
