--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
@@ -17,6 +17,8 @@
       </table> 
     </form> 
   </div>
+  <hr/>
+  <img src="/images/tetterode_building.jpg" title="Tetterode producten"/>
   <webshop:filters>
   <hr/> 
   <div class="side_bar_panel"> 
@@ -40,6 +42,7 @@
   </list:plural></cms:locales>		  
   
   <hr/> 
+<!-- 
     <webshop:current-user>
     <object:none>
   <div class="side_bar_panel loginpanel"> 
@@ -57,10 +60,11 @@
       </table> 
     </webshop:login-form>
      <a href="/register">Register as new customer &gt;&gt;</a>
-  </div> 
+  </div>
   <hr/> 
     </object:none>
     </webshop:current-user>
+   --> 
   <div class="side_bar_panel"> 
     <h1>Order status</h1>
     <webshop:shopping-cart>
