--- a/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
+++ b/CatalogXS/trunk/DemoWebshop/src/main/resources/claro/demowebshop/website/templates/pageframe.html
@@ -6,13 +6,14 @@
 <meta name="description" content="" />
 <link href="/default.css" rel="stylesheet" type="text/css" />
 <link href="/layout.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" href="/images/favicon_02.png" type="image/x-icon" />
 <style type="text/css">
 <!--
  @import url("layout.css");
 -->
 </style>
 <script type="text/javascript" src="/ajax_request/liftAjax.js"></script> 
-<script id="jquery" src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"/>
+<script id="jquery" src="/js/jquery-1.4.2.min.js" type="text/javascript"/>
 <script id="json" src="/classpath/json.js" type="text/javascript"/>
 </head>
 <body>
@@ -60,9 +61,11 @@
 		<form method="get" action="">
 			<fieldset>
 			<select id="unit" name="unit">
-				<option value="USD">U.S. Dollar</option>
+				<option value="en">English</option>
+				<option value="du">Dutch</option>
+				<option value="sp">Spanish</option>
 			</select>
-			<input type="submit" class="button4" id="currency-submit" value="Change Currency" />
+			<input type="submit" class="button4" id="currency-submit" value="Change Language" />
 			</fieldset>
 		</form>
 	</div>
@@ -103,7 +106,7 @@
 
 <div id="footer">
 	<p class="links"><a href="#">Privacy Policy</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Legal Information</a> &#160;&#160;&#160;|&#160;&#160;&#160; <a href="#">Terms of Use</a></p>
-	<p class="legal">Copyright (c) 2008 Websitename.com. All rights reserved.</p>
+	<p class="legal">Powered By AgileXS.</p>
 </div>
 <!-- end #footer -->
 </body>
