--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/category_menu_node.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/category_menu_node.html
@@ -1,18 +1,38 @@
 <li>
+	<category:is-selected>
+		<attr:append name="class" value="active" />
+		<category:parent-link><h2><category:value property="Name" /></h2></category:parent-link>
+	<object:none>
+	 	<category:link><h2><category:value property="Name" /></h2></category:link>
+	</object:none>
+	</category:is-selected>
+	
+	<category:is-on-trail>
+	    <category:sub-categories>
+	      	<ul><list:repeat>
+	        <template:include template="templates/category_menu_node" />
+	      </list:repeat></ul>
+	    </category:sub-categories>
+	  </category:is-on-trail>
+</li>
+
+<!-- 
+<li>
   <list:first><attr:set name="class" value="first" /></list:first>
   <category:is-selected>
-  	<attr:append name="class" value="selected" />
-  	<category:parent-link><category:value property="Name" /></category:parent-link>
+  	<attr:append name="class" value="active" />
+  	<category:parent-link><h2><category:value property="Name" /></h2></category:parent-link>
+    
   <object:none>
-	  <category:link><category:value property="Name" /></category:link>
+	  <category:link><h2><category:value property="Name" /></h2></category:link>
   </object:none>
   </category:is-selected>
   <category:is-on-trail>
     <category:sub-categories>
-    
       <ul><list:repeat>
-        <template:include template="templates/navigation-node" />
+        <template:include template="templates/category_menu_node" />
       </list:repeat></ul>
     </category:sub-categories>
   </category:is-on-trail>
 </li>
+ -->
