--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/page.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/page.html
@@ -8,7 +8,7 @@
     <template:include template="page_head">
     <title>Webshop</title>
 	  <link rel="stylesheet" type="text/css" href="/webshop.css" />
-	  <link rel="shortcut icon" type="image/x-icon" href="/images/icon.jpg" />
+	  <link rel="shortcut icon" type="image/x-icon" href="/images/icon.png" />
     </template:include>
     
     <script id="jquery" src="/javascripts/jquery-1.4.2.min.js" type="text/javascript"/>
