git-svn-id: file:///var/svn/claro-catalog@388 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/easyenterprise/citykids/trunk/war/citykids.css
+++ b/easyenterprise/citykids/trunk/war/citykids.css
@@ -52,3 +52,18 @@ input.button1,input.button2,input.button3,input.button4,input.button5 {
 	text-align: center;
 	text-decoration: none;
 }
+
+/** Planning table */
+table.planning {
+	border: 1px solid blue;
+}
+
+table.planning .left-bar {
+	background-color: #e5e0e0;
+	border-right: 2px solid blue;
+}
+
+table.planning td {
+	border: 1px solid gray;
+	width: 20px;
+}
