git-svn-id: file:///var/svn/claro-catalog@395 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/page.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/page.html
@@ -40,7 +40,8 @@
           <template:include template="templates/left_bar"/>
         </td>
         <td id="page_middle" class="page_content"> 
-          <div class="bread_crumb"><a onclick="javascript:history.back()">back</a><br/></div>
+<!--           <div class="bread_crumb"><a onclick="javascript:history.back()">back</a><br/></div>
+ -->
           <template:content/>
         </td>
         <td id="page_right">
