git-svn-id: file:///var/svn/claro-catalog@396 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/webshop.css
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/webshop.css
@@ -722,6 +722,9 @@ font-weight: bold;
 	width: 558px;
 	height: 130px;
 }
+.product-container {
+	width: 558px;
+}
 .product {
   position:relative;
   background-image:url("images/product_panel.png");
