--- a/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/filters.html
+++ b/CatalogXS/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/filters.html
@@ -1,6 +1,6 @@
 <div id="filters" class="boxA">
 <div class="title">
-<h1>Filters</h1>
+<h1>Selection</h1>
 </div>
 <div class="content"><webshop:filtering>
   <filtering:filters>
@@ -14,19 +14,19 @@
     <webshop:current-category>
       <category:is-filtered-on not="true">
         <li>
-          <category:add-filter-link>Add filter: <category:name /></category:add-filter-link>
+          <category:add-filter-link>Add selection: <category:name /></category:add-filter-link>
         </li>
       </category:is-filtered-on>
     </webshop:current-category>
     <webshop:current-search-string>
       <li>
-        <webshop:add-search-filter-link>Add filter: Search for '<object:value/>'</webshop:add-search-filter-link>
+        <webshop:add-search-filter-link>Add selection: Search for '<object:value/>'</webshop:add-search-filter-link>
       </li>
     </webshop:current-search-string>
     <filtering:filters>
       <list:first>
         <li>
-          <filtering:clear-link>Clear filters</filtering:clear-link>
+          <filtering:clear-link>Clear Selections</filtering:clear-link>
         </li>
       </list:first>
     </filtering:filters>
