git-svn-id: file:///var/svn/claro-catalog@470 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -96,6 +96,12 @@ table.catalogheader {
 }
 
 
+/** catalogpage styles */
+
+table.filterpanel { margin-left: 20px; vertical-align: middle; }
+table.filterpanel input.gwt-TextBox { margin-right: 40px; }
+
+
 /** Move used styles above this line */
 
 
