git-svn-id: file:///var/svn/claro-catalog@480 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -304,3 +304,12 @@ button.button1, button.button2, button.button3, button.button4, button.button5 {
 .cxs-table .cxs-even {
 	background-color: white;
 }
+
+/**
+ * SExpr
+ */
+ 
+.sexpr-error {
+	color: red;
+	font-weight: bold;
+}
