git-svn-id: file:///var/svn/claro-catalog@488 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -95,8 +95,18 @@ table.catalogheader {
     background: url(images/homepage07.gif) repeat-x left top;
 }
 
+/** master detail styles */
+
+.detailPanel { background-color: #FFF3DF; border: 2px solid #9c0000; }
+#.detailPanel { border: 2px solid #9c0000; }
+.erasePanel { border-left: 2px solid #FFF3DF;}
+.selectionPanel { border: 2px solid #9c0000;}
+.masterDetail table td { padding: 0px; margin: 0px;}
+.masterselection td { background-color: #FFF3DF; padding: 0px;}
 
 /** catalogpage styles */
+
+.masterdetailtest { padding: 5px;}
 
 table.filterpanel { margin-left: 20px; vertical-align: middle; }
 table.filterpanel input.gwt-TextBox { margin-right: 40px; }
