git-svn-id: file:///var/svn/claro-catalog@536 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -106,12 +106,12 @@ table.catalogheader {
 
 /** master detail styles */
 
-.detailPanel { background-color: #FFF3DF; border: 2px solid #9c0000; }
-#.detailPanel { border: 2px solid #9c0000; }
-.erasePanel { border-left: 2px solid #FFF3DF;}
-.selectionPanel { border: 2px solid #9c0000;}
-.masterDetail table td { padding: 0px; margin: 0px;}
-.masterselection td { background-color: #FFF3DF; padding: 0px;}
+.ee-MasterDetailDetailPanel { background-color: #FFF3DF; border: 2px solid #9c0000; }
+#.ee-MasterDetailDetailPanel { border: 2px solid #9c0000; }
+.ee-MasterDetailErasePanel { border-left: 2px solid #FFF3DF;}
+.ee-MasterDetailSelectionPanel { border: 2px solid #9c0000;}
+.ee-MasterDetail table td { padding: 0px; margin: 0px;}
+.ee-MasterDetailSelection td { background-color: #FFF3DF; padding: 0px;}
 
 /** catalogpage styles */
 
