--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -106,7 +106,7 @@ table.catalogheader {
 
 /** master detail styles */
 
-.ee-MasterDetailDetailPanel { background-color: #FFF3DF; border: 2px solid #9c0000; }
+.ee-MasterDetailDetailPanel { background-color: #FFF3DF; border: 2px solid #9c0000; margin-top: 8px; }
 #.ee-MasterDetailDetailPanel { border: 2px solid #9c0000; }
 .ee-MasterDetailErasePanel { border-left: 2px solid #FFF3DF;}
 .ee-MasterDetailSelectionPanel { border: 2px solid #9c0000;}
